versions/0.9.0/_sources/refs/_aws-cdk_aws-autoscalingplans.rst.txt
.. @jsii-pacmak:meta@ {"fingerprint":"5y1yCKIUDXOB2YBgjJjwCzxu7WZ2eosRpzwamjBD34k="}

@aws-cdk/aws-autoscalingplans
=============================

.. tabs::

   .. group-tab:: C#

      View in `Nuget <https://www.nuget.org/packages/Amazon.CDK.AWS.AutoScalingPlans/0.9.0>`_

      **csproj**:

      .. code-block:: xml

         <PackageReference Include="Amazon.CDK.AWS.AutoScalingPlans" Version="0.9.0" />

      **dotnet**:

      .. code-block:: console

         dotnet add package Amazon.CDK.AWS.AutoScalingPlans --version 0.9.0

      **packages.config**:

      .. code-block:: xml

         <package id="Amazon.CDK.AWS.AutoScalingPlans" version="0.9.0" />


   .. group-tab:: Java

      View in `Maven Central <https://repo1.maven.org/maven2/software/amazon/awscdk/autoscalingplans/0.9.0/>`_

      **Apache Buildr**:

      .. code-block:: none

         'software.amazon.awscdk:autoscalingplans:jar:0.9.0'

      **Apache Ivy**:

      .. code-block:: xml

         <dependency groupId="software.amazon.awscdk" name="autoscalingplans" rev="0.9.0"/>

      **Apache Maven**:

      .. code-block:: xml

         <dependency>
           <groupId>software.amazon.awscdk</groupId>
           <artifactId>autoscalingplans</artifactId>
           <version>0.9.0</version>
         </dependency>

      **Gradle / Grails**:

      .. code-block:: none

         compile 'software.amazon.awscdk:autoscalingplans:0.9.0'

      **Groovy Grape**:

      .. code-block:: none

         @Grapes(
         @Grab(group='software.amazon.awscdk', module='autoscalingplans', version='0.9.0')
         )


   .. group-tab:: JavaScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-autoscalingplans/v/0.9.0>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-autoscalingplans@0.9.0

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-autoscalingplans": "^0.9.0"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-autoscalingplans@0.9.0


   .. group-tab:: TypeScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-autoscalingplans/v/0.9.0>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-autoscalingplans@0.9.0

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-autoscalingplans": "^0.9.0"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-autoscalingplans@0.9.0



.. mdinclude:: ./__aws-cdk_aws-autoscalingplans.README.md

Reference
---------

.. py:module:: @aws-cdk/aws-autoscalingplans

ScalingPlanArn
^^^^^^^^^^^^^^

.. py:class:: ScalingPlanArn(valueOrFunction, [displayName])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.AutoScalingPlans;

      .. code-tab:: java

         import software.amazon.awscdk.services.autoscalingplans.ScalingPlanArn;

      .. code-tab:: javascript

         const { ScalingPlanArn } = require('@aws-cdk/aws-autoscalingplans');

      .. code-tab:: typescript

         import { ScalingPlanArn } from '@aws-cdk/aws-autoscalingplans';



   :extends: :py:class:`@aws-cdk/cdk.Arn`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined


cloudformation
^^^^^^^^^^^^^^
.. py:module:: @aws-cdk/aws-autoscalingplans.cloudformation

ScalingPlanResource
~~~~~~~~~~~~~~~~~~~

.. py:class:: ScalingPlanResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.AutoScalingPlans;

      .. code-tab:: java

         import software.amazon.awscdk.services.autoscalingplans.cloudformation.ScalingPlanResource;

      .. code-tab:: javascript

         const { cloudformation.ScalingPlanResource } = require('@aws-cdk/aws-autoscalingplans');

      .. code-tab:: typescript

         import { cloudformation.ScalingPlanResource } from '@aws-cdk/aws-autoscalingplans';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``ScalingPlanResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``ScalingPlanResource``
   :type properties: :py:class:`~@aws-cdk/aws-autoscalingplans.cloudformation.ScalingPlanResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: string => any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: ref

      :type: :py:class:`~@aws-cdk/aws-autoscalingplans.ScalingPlanArn` *(readonly)*

   .. py:class:: ApplicationSourceProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.AutoScalingPlans;

         .. code-tab:: java

            import software.amazon.awscdk.services.autoscalingplans.cloudformation.ScalingPlanResource.ApplicationSourceProperty;

         .. code-tab:: javascript

            // cloudformation.ScalingPlanResource.ApplicationSourceProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.ScalingPlanResource.ApplicationSourceProperty } from '@aws-cdk/aws-autoscalingplans';





      .. py:attribute:: cloudFormationStackArn

         ``ScalingPlanResource.ApplicationSourceProperty.CloudFormationStackARN``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscalingplans-scalingplan-applicationsource.html#cfn-autoscalingplans-scalingplan-applicationsource-cloudformationstackarn


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: tagFilters

         ``ScalingPlanResource.ApplicationSourceProperty.TagFilters``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscalingplans-scalingplan-applicationsource.html#cfn-autoscalingplans-scalingplan-applicationsource-tagfilters


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (:py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-autoscalingplans.cloudformation.ScalingPlanResource.TagFilterProperty`)[] or undefined


   .. py:class:: CustomizedScalingMetricSpecificationProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.AutoScalingPlans;

         .. code-tab:: java

            import software.amazon.awscdk.services.autoscalingplans.cloudformation.ScalingPlanResource.CustomizedScalingMetricSpecificationProperty;

         .. code-tab:: javascript

            // cloudformation.ScalingPlanResource.CustomizedScalingMetricSpecificationProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.ScalingPlanResource.CustomizedScalingMetricSpecificationProperty } from '@aws-cdk/aws-autoscalingplans';





      .. py:attribute:: metricName

         ``ScalingPlanResource.CustomizedScalingMetricSpecificationProperty.MetricName``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscalingplans-scalingplan-customizedscalingmetricspecification.html#cfn-autoscalingplans-scalingplan-customizedscalingmetricspecification-metricname


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: namespace

         ``ScalingPlanResource.CustomizedScalingMetricSpecificationProperty.Namespace``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscalingplans-scalingplan-customizedscalingmetricspecification.html#cfn-autoscalingplans-scalingplan-customizedscalingmetricspecification-namespace


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: statistic

         ``ScalingPlanResource.CustomizedScalingMetricSpecificationProperty.Statistic``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscalingplans-scalingplan-customizedscalingmetricspecification.html#cfn-autoscalingplans-scalingplan-customizedscalingmetricspecification-statistic


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: dimensions

         ``ScalingPlanResource.CustomizedScalingMetricSpecificationProperty.Dimensions``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscalingplans-scalingplan-customizedscalingmetricspecification.html#cfn-autoscalingplans-scalingplan-customizedscalingmetricspecification-dimensions


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (:py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-autoscalingplans.cloudformation.ScalingPlanResource.MetricDimensionProperty`)[] or undefined


      .. py:attribute:: unit

         ``ScalingPlanResource.CustomizedScalingMetricSpecificationProperty.Unit``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscalingplans-scalingplan-customizedscalingmetricspecification.html#cfn-autoscalingplans-scalingplan-customizedscalingmetricspecification-unit


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:class:: MetricDimensionProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.AutoScalingPlans;

         .. code-tab:: java

            import software.amazon.awscdk.services.autoscalingplans.cloudformation.ScalingPlanResource.MetricDimensionProperty;

         .. code-tab:: javascript

            // cloudformation.ScalingPlanResource.MetricDimensionProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.ScalingPlanResource.MetricDimensionProperty } from '@aws-cdk/aws-autoscalingplans';





      .. py:attribute:: name

         ``ScalingPlanResource.MetricDimensionProperty.Name``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscalingplans-scalingplan-metricdimension.html#cfn-autoscalingplans-scalingplan-metricdimension-name


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: value

         ``ScalingPlanResource.MetricDimensionProperty.Value``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscalingplans-scalingplan-metricdimension.html#cfn-autoscalingplans-scalingplan-metricdimension-value


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:class:: PredefinedScalingMetricSpecificationProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.AutoScalingPlans;

         .. code-tab:: java

            import software.amazon.awscdk.services.autoscalingplans.cloudformation.ScalingPlanResource.PredefinedScalingMetricSpecificationProperty;

         .. code-tab:: javascript

            // cloudformation.ScalingPlanResource.PredefinedScalingMetricSpecificationProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.ScalingPlanResource.PredefinedScalingMetricSpecificationProperty } from '@aws-cdk/aws-autoscalingplans';





      .. py:attribute:: predefinedScalingMetricType

         ``ScalingPlanResource.PredefinedScalingMetricSpecificationProperty.PredefinedScalingMetricType``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscalingplans-scalingplan-predefinedscalingmetricspecification.html#cfn-autoscalingplans-scalingplan-predefinedscalingmetricspecification-predefinedscalingmetrictype


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: resourceLabel

         ``ScalingPlanResource.PredefinedScalingMetricSpecificationProperty.ResourceLabel``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscalingplans-scalingplan-predefinedscalingmetricspecification.html#cfn-autoscalingplans-scalingplan-predefinedscalingmetricspecification-resourcelabel


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:class:: ScalingInstructionProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.AutoScalingPlans;

         .. code-tab:: java

            import software.amazon.awscdk.services.autoscalingplans.cloudformation.ScalingPlanResource.ScalingInstructionProperty;

         .. code-tab:: javascript

            // cloudformation.ScalingPlanResource.ScalingInstructionProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.ScalingPlanResource.ScalingInstructionProperty } from '@aws-cdk/aws-autoscalingplans';





      .. py:attribute:: maxCapacity

         ``ScalingPlanResource.ScalingInstructionProperty.MaxCapacity``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscalingplans-scalingplan-scalinginstruction.html#cfn-autoscalingplans-scalingplan-scalinginstruction-maxcapacity


         :type: number or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: minCapacity

         ``ScalingPlanResource.ScalingInstructionProperty.MinCapacity``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscalingplans-scalingplan-scalinginstruction.html#cfn-autoscalingplans-scalingplan-scalinginstruction-mincapacity


         :type: number or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: resourceId

         ``ScalingPlanResource.ScalingInstructionProperty.ResourceId``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscalingplans-scalingplan-scalinginstruction.html#cfn-autoscalingplans-scalingplan-scalinginstruction-resourceid


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: scalableDimension

         ``ScalingPlanResource.ScalingInstructionProperty.ScalableDimension``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscalingplans-scalingplan-scalinginstruction.html#cfn-autoscalingplans-scalingplan-scalinginstruction-scalabledimension


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: serviceNamespace

         ``ScalingPlanResource.ScalingInstructionProperty.ServiceNamespace``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscalingplans-scalingplan-scalinginstruction.html#cfn-autoscalingplans-scalingplan-scalinginstruction-servicenamespace


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: targetTrackingConfigurations

         ``ScalingPlanResource.ScalingInstructionProperty.TargetTrackingConfigurations``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscalingplans-scalingplan-scalinginstruction.html#cfn-autoscalingplans-scalingplan-scalinginstruction-targettrackingconfigurations


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (:py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-autoscalingplans.cloudformation.ScalingPlanResource.TargetTrackingConfigurationProperty`)[]


   .. py:class:: TagFilterProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.AutoScalingPlans;

         .. code-tab:: java

            import software.amazon.awscdk.services.autoscalingplans.cloudformation.ScalingPlanResource.TagFilterProperty;

         .. code-tab:: javascript

            // cloudformation.ScalingPlanResource.TagFilterProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.ScalingPlanResource.TagFilterProperty } from '@aws-cdk/aws-autoscalingplans';





      .. py:attribute:: key

         ``ScalingPlanResource.TagFilterProperty.Key``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscalingplans-scalingplan-tagfilter.html#cfn-autoscalingplans-scalingplan-tagfilter-key


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: values

         ``ScalingPlanResource.TagFilterProperty.Values``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscalingplans-scalingplan-tagfilter.html#cfn-autoscalingplans-scalingplan-tagfilter-values


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (string or :py:class:`@aws-cdk/cdk.CloudFormationToken`)[] or undefined


   .. py:class:: TargetTrackingConfigurationProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.AutoScalingPlans;

         .. code-tab:: java

            import software.amazon.awscdk.services.autoscalingplans.cloudformation.ScalingPlanResource.TargetTrackingConfigurationProperty;

         .. code-tab:: javascript

            // cloudformation.ScalingPlanResource.TargetTrackingConfigurationProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.ScalingPlanResource.TargetTrackingConfigurationProperty } from '@aws-cdk/aws-autoscalingplans';





      .. py:attribute:: targetValue

         ``ScalingPlanResource.TargetTrackingConfigurationProperty.TargetValue``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscalingplans-scalingplan-targettrackingconfiguration.html#cfn-autoscalingplans-scalingplan-targettrackingconfiguration-targetvalue


         :type: number or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: customizedScalingMetricSpecification

         ``ScalingPlanResource.TargetTrackingConfigurationProperty.CustomizedScalingMetricSpecification``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscalingplans-scalingplan-targettrackingconfiguration.html#cfn-autoscalingplans-scalingplan-targettrackingconfiguration-customizedscalingmetricspecification


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-autoscalingplans.cloudformation.ScalingPlanResource.CustomizedScalingMetricSpecificationProperty` or undefined


      .. py:attribute:: disableScaleIn

         ``ScalingPlanResource.TargetTrackingConfigurationProperty.DisableScaleIn``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscalingplans-scalingplan-targettrackingconfiguration.html#cfn-autoscalingplans-scalingplan-targettrackingconfiguration-disablescalein


         :type: boolean or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: estimatedInstanceWarmup

         ``ScalingPlanResource.TargetTrackingConfigurationProperty.EstimatedInstanceWarmup``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscalingplans-scalingplan-targettrackingconfiguration.html#cfn-autoscalingplans-scalingplan-targettrackingconfiguration-estimatedinstancewarmup


         :type: number or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: predefinedScalingMetricSpecification

         ``ScalingPlanResource.TargetTrackingConfigurationProperty.PredefinedScalingMetricSpecification``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscalingplans-scalingplan-targettrackingconfiguration.html#cfn-autoscalingplans-scalingplan-targettrackingconfiguration-predefinedscalingmetricspecification


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-autoscalingplans.cloudformation.ScalingPlanResource.PredefinedScalingMetricSpecificationProperty` or undefined


      .. py:attribute:: scaleInCooldown

         ``ScalingPlanResource.TargetTrackingConfigurationProperty.ScaleInCooldown``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscalingplans-scalingplan-targettrackingconfiguration.html#cfn-autoscalingplans-scalingplan-targettrackingconfiguration-scaleincooldown


         :type: number or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: scaleOutCooldown

         ``ScalingPlanResource.TargetTrackingConfigurationProperty.ScaleOutCooldown``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscalingplans-scalingplan-targettrackingconfiguration.html#cfn-autoscalingplans-scalingplan-targettrackingconfiguration-scaleoutcooldown


         :type: number or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined



ScalingPlanResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: ScalingPlanResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.AutoScalingPlans;

      .. code-tab:: java

         import software.amazon.awscdk.services.autoscalingplans.cloudformation.ScalingPlanResourceProps;

      .. code-tab:: javascript

         // cloudformation.ScalingPlanResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.ScalingPlanResourceProps } from '@aws-cdk/aws-autoscalingplans';





   .. py:attribute:: applicationSource

      ``AWS::AutoScalingPlans::ScalingPlan.ApplicationSource``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-autoscalingplans-scalingplan.html#cfn-autoscalingplans-scalingplan-applicationsource


      :type: :py:class:`~@aws-cdk/aws-autoscalingplans.cloudformation.ScalingPlanResource.ApplicationSourceProperty` or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:attribute:: scalingInstructions

      ``AWS::AutoScalingPlans::ScalingPlan.ScalingInstructions``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-autoscalingplans-scalingplan.html#cfn-autoscalingplans-scalingplan-scalinginstructions


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (:py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-autoscalingplans.cloudformation.ScalingPlanResource.ScalingInstructionProperty`)[]



.. py:currentmodule:: @aws-cdk/aws-autoscalingplans

